check.txt
    Checking veltrix v0.1.0 (C:\Users\Admin\github\Veltrix)
error[E0583]: file not found for module `camera`
 --> src\renderer\mod.rs:3:1
  |
3 | pub mod camera;
  | ^^^^^^^^^^^^^^^
  |
  = help: to create the module `camera`, create file "src\renderer\camera.rs" or "src\renderer\camera\mod.rs"
  = note: if there is a `mod camera` elsewhere in the crate already, import it with `use crate::...` instead

error[E0583]: file not found for module `device`
 --> src\renderer\mod.rs:5:1
  |
5 | pub mod device;
  | ^^^^^^^^^^^^^^^
  |
  = help: to create the module `device`, create file "src\renderer\device.rs" or "src\renderer\device\mod.rs"
  = note: if there is a `mod device` elsewhere in the crate already, import it with `use crate::...` instead

error[E0583]: file not found for module `pipeline`
 --> src\renderer\mod.rs:6:1
  |
6 | pub mod pipeline;
  | ^^^^^^^^^^^^^^^^^
  |
  = help: to create the module `pipeline`, create file "src\renderer\pipeline.rs" or "src\renderer\pipeline\mod.rs"
  = note: if there is a `mod pipeline` elsewhere in the crate already, import it with `use crate::...` instead

error[E0583]: file not found for module `shader`
 --> src\renderer\mod.rs:7:1
  |
7 | pub mod shader;
  | ^^^^^^^^^^^^^^^
  |
  = help: to create the module `shader`, create file "src\renderer\shader.rs" or "src\renderer\shader\mod.rs"
  = note: if there is a `mod shader` elsewhere in the crate already, import it with `use crate::...` instead

error[E0583]: file not found for module `sprite_batcher`
 --> src\renderer\mod.rs:8:1
  |
8 | pub mod sprite_batcher;
  | ^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: to create the module `sprite_batcher`, create file "src\renderer\sprite_batcher.rs" or "src\renderer\sprite_batcher\mod.rs"
  = note: if there is a `mod sprite_batcher` elsewhere in the crate already, import it with `use crate::...` instead

error[E0583]: file not found for module `texture`
 --> src\renderer\mod.rs:9:1
  |
9 | pub mod texture;
  | ^^^^^^^^^^^^^^^^
  |
  = help: to create the module `texture`, create file "src\renderer\texture.rs" or "src\renderer\texture\mod.rs"
  = note: if there is a `mod texture` elsewhere in the crate already, import it with `use crate::...` instead

error[E0432]: unresolved import `copypasta`
 --> src\platform\clipboard.rs:3:5
  |
3 | use copypasta::{ClipboardContext, ClipboardProvider};
  |     ^^^^^^^^^ use of unresolved module or unlinked crate `copypasta`
  |
  = help: if you wanted to use a crate named `copypasta`, use `cargo add copypasta` to add it to your `Cargo.toml`

error[E0432]: unresolved import `directories`
 --> src\platform\filesystem.rs:4:5
  |
4 | use directories::ProjectDirs;
  |     ^^^^^^^^^^^ use of unresolved module or unlinked crate `directories`
  |
  = help: if you wanted to use a crate named `directories`, use `cargo add directories` to add it to your `Cargo.toml`

error[E0432]: unresolved import `sysinfo`
 --> src\platform\system_info.rs:3:5
  |
3 | use sysinfo::{System, SystemExt, CpuExt};
  |     ^^^^^^^ use of unresolved module or unlinked crate `sysinfo`
  |
  = help: if you wanted to use a crate named `sysinfo`, use `cargo add sysinfo` to add it to your `Cargo.toml`

error[E0432]: unresolved import `debug_overlay::DebugOverlay`
  --> src\ui\mod.rs:10:9
   |
10 | pub use debug_overlay::DebugOverlay;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^ no `DebugOverlay` in `ui::debug_overlay`

error[E0433]: failed to resolve: could not find `canvas` in `super`
 --> src\debug\inspector.rs:7:46
  |
7 | pub fn draw_inspector(ui_canvas: &mut super::canvas::UICanvas, world: &World) {
  |                                              ^^^^^^ could not find `canvas` in `super`
  |
help: consider importing this module
  |
3 + use crate::ui::canvas;
  |
help: if you import `canvas`, refer to it directly
  |
7 - pub fn draw_inspector(ui_canvas: &mut super::canvas::UICanvas, world: &World) {
7 + pub fn draw_inspector(ui_canvas: &mut canvas::UICanvas, world: &World) {
  |

error[E0425]: cannot find type `BroadPhaseMultiSap` in this scope
  --> src\physics\world.rs:19:22
   |
19 |     pub broad_phase: BroadPhaseMultiSap,
   |                      ^^^^^^^^^^^^^^^^^^ not found in this scope

warning: unused import: `std::any::Any`
 --> src\assets\handle.rs:3:5
  |
3 | use std::any::Any;
  |     ^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `std::sync::Arc`
 --> src\assets\handle.rs:6:5
  |
6 | use std::sync::Arc;
  |     ^^^^^^^^^^^^^^

warning: unused import: `wgpu::Device`
 --> src\assets\server.rs:6:5
  |
6 | use wgpu::Device;
  |     ^^^^^^^^^^^^

warning: unused import: `Source`
 --> src\audio\clip.rs:4:22
  |
4 | use rodio::{Decoder, Source};
  |                      ^^^^^^

warning: unused import: `std::sync::Arc`
 --> src\audio\manager.rs:5:5
  |
5 | use std::sync::Arc;
  |     ^^^^^^^^^^^^^^

warning: unused import: `crate::math::random_range`
 --> src\camera\shake.rs:4:5
  |
4 | use crate::math::random_range;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: implementation of an `unsafe` trait
  --> src\ecs\storage.rs:46:1
   |
46 | unsafe impl<T: Send + Sync> Send for ComponentStorage<T> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> src\lib.rs:31:9
   |
31 | #![deny(unsafe_code)]
   |         ^^^^^^^^^^^

error: implementation of an `unsafe` trait
  --> src\ecs\storage.rs:47:1
   |
47 | unsafe impl<T: Send + Sync> Sync for ComponentStorage<T> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `crate::math::Vec2`
  --> src\input\mod.rs:12:5
   |
12 | use crate::math::Vec2;
   |     ^^^^^^^^^^^^^^^^^

error: usage of an `unsafe` block
  --> src\physics\sync.rs:20:26
   |
20 |             let handle = unsafe { RigidBodyHandle::from_raw_parts(rb.handle_id as u32, 0) };
   |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `Transform2D`
 --> src\scene\components.rs:5:25
  |
5 | use crate::math::{Rect, Transform2D};
  |                         ^^^^^^^^^^^

error[E0433]: failed to resolve: use of undeclared type `BroadPhaseMultiSap`
  --> src\physics\world.rs:49:26
   |
49 |             broad_phase: BroadPhaseMultiSap::new(),
   |                          ^^^^^^^^^^^^^^^^^^ use of undeclared type `BroadPhaseMultiSap`

error[E0282]: type annotations needed
  --> src\platform\clipboard.rs:26:24
   |
26 |             Ok(ctx) => ctx.get_contents().ok(),
   |                        ^^^ cannot infer type

error[E0282]: type annotations needed
  --> src\platform\clipboard.rs:38:17
   |
38 |                 ctx.set_contents(text).is_ok()
   |                 ^^^ cannot infer type

error[E0282]: type annotations needed
  --> src\platform\filesystem.rs:33:33
   |
33 |         self.dirs.as_ref().map(|d| d.data_dir().to_path_buf())
   |                                 ^  - type must be known at this point
   |
help: consider giving this closure parameter an explicit type
   |
33 |         self.dirs.as_ref().map(|d: /* Type */| d.data_dir().to_path_buf())
   |                                  ++++++++++++

error[E0282]: type annotations needed
  --> src\platform\filesystem.rs:38:33
   |
38 |         self.dirs.as_ref().map(|d| d.cache_dir().to_path_buf())
   |                                 ^  - type must be known at this point
   |
help: consider giving this closure parameter an explicit type
   |
38 |         self.dirs.as_ref().map(|d: /* Type */| d.cache_dir().to_path_buf())
   |                                  ++++++++++++

error[E0599]: no method named `config_mut` found for struct `Reader<R>` in the current scope
  --> src\tilemap\tiled_loader.rs:24:16
   |
24 |         reader.config_mut().trim_text(true);
   |                ^^^^^^^^^^ method not found in `Reader<&[u8]>`

warning: unused import: `slotmap::Key`
 --> src\ecs\storage.rs:5:5
  |
5 | use slotmap::Key;
  |     ^^^^^^^^^^^^

warning: unused import: `slotmap::Key`
  --> src\ecs\world.rs:17:13
   |
17 |         use slotmap::Key;
   |             ^^^^^^^^^^^^

warning: variable does not need to be mutable
   --> src\core\engine.rs:157:13
    |
157 |         let mut should_exit = false;
    |             ----^^^^^^^^^^^
    |             |
    |             help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `should_exit`
   --> src\core\engine.rs:157:13
    |
157 |         let mut should_exit = false;
    |             ^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_should_exit`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: function cannot return without recursing
  --> src\ecs\world.rs:16:5
   |
16 |     pub fn null() -> Self {
   |     ^^^^^^^^^^^^^^^^^^^^^ cannot return without recursing
17 |         use slotmap::Key;
18 |         Self::null()
   |         ------------ recursive call site
   |
   = help: a `loop` may express intention better if this is on purpose
   = note: `#[warn(unconditional_recursion)]` on by default

warning: unnecessary `unsafe` block
  --> src\physics\sync.rs:20:26
   |
20 |             let handle = unsafe { RigidBodyHandle::from_raw_parts(rb.handle_id as u32, 0) };
   |                          ^^^^^^ unnecessary `unsafe` block
   |
   = note: `#[warn(unused_unsafe)]` (part of `#[warn(unused)]`) on by default

Some errors have detailed explanations: E0282, E0425, E0432, E0433, E0583, E0599.
For more information about an error, try `rustc --explain E0282`.
warning: `veltrix` (lib) generated 14 warnings
error: could not compile `veltrix` (lib) due to 21 previous errors; 14 warnings emitted
